--- a/flexbox-layout/index.html
+++ b/flexbox-layout/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="x-ua-compatible" content="ie=edge">
-        <title></title>
+        <title>All About Emmy</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -13,7 +13,7 @@
         <link rel="stylesheet" href="css/normalize.css">
         <link rel="stylesheet" href="css/main.css">
         <script src="js/vendor/modernizr-2.8.3.min.js"></script>
-        <link href="https://fonts.googleapis.com/css?family=Lora|Source+Sans+Pro:400,700" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css?family=Righteous|Roboto+Condensed:400,700&display=swap" rel="stylesheet">
     </head>
     <body>
         <!--[if lt IE 8]>
@@ -22,18 +22,28 @@
 
         <!-- Add your site or application content here -->
         <section class="flex-container">
-            <header>Header</header>
-            <main>Main</main>
+            <header>
+                <h1>Hi! I'm Emery.</h1>
+                <h2>But you can call me <span>Emmy</span>.</h2>
+            </header>
+            <main>
+                <p>I'm a front end web developer from the windy city. I love coding colorful websites that serve a purpose. My ideal job would be making websites for restaurants, retail spaces, as well as working in the entertainment industry. When I'm not squinting at endless lines of CSS, I love music, skating, cooking and catching up on my Netflix queue ;)</p></main>
             <div id="div-1" class="flex-items">
-                Div 1
+               <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam blandit gravida turpis vel posuere. Aliquam vel mi justo. Aliquam consectetur felis odio, a feugiat felis euismod eget. In tempus posuere ipsum vitae molestie. Cras vel quam tortor. Interdum et malesuada fames ac ante ipsum primis in faucibus. Sed ut mi malesuada, congue nisi vitae, finibus leo. Aenean gravida orci ipsum, eget placerat neque varius sit amet. Quisque sed fermentum dui.</p>
             </div>
             <div id="div-2" class="flex-items">
-                Div 2
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam blandit gravida turpis vel posuere. Aliquam vel mi justo. Aliquam consectetur felis odio, a feugiat felis euismod eget. In tempus posuere ipsum vitae molestie. Cras vel quam tortor. Interdum et malesuada fames ac ante ipsum primis in faucibus. Sed ut mi malesuada, congue nisi vitae, finibus leo. Aenean gravida orci ipsum, eget placerat neque varius sit amet. Quisque sed fermentum dui.</p>
             </div>
             <div id="div-3" class="flex-items">
-                Div 3
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam blandit gravida turpis vel posuere. Aliquam vel mi justo. Aliquam consectetur felis odio, a feugiat felis euismod eget. In tempus posuere ipsum vitae molestie. Cras vel quam tortor. Interdum et malesuada fames ac ante ipsum primis in faucibus. Sed ut mi malesuada, congue nisi vitae, finibus leo. Aenean gravida orci ipsum, eget placerat neque varius sit amet. Quisque sed fermentum dui.</p>
             </div>
-            <footer>Footer</footer>
+            <footer>
+                <h2>Let's connect!</h2>
+                <div id="div=1">
+                    <a href="https://www.linkedin.com/in/emmyjordan16/" target="_blank"><img src="./img/linked-in.png" class="social" alt="LinkedIn" /></a>
+                    <a href="https://github.com/emmy-html" target="_blank"><img src="./img/github.png" class="social" alt="GitHub" /></a>
+                </div>
+            </footer>
         </section>
 
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
